--- a/afs/templates/views/components/reports/modification.htm
+++ b/afs/templates/views/components/reports/modification.htm
@@ -66,68 +66,24 @@
 {% block summary %}
 
 <div class="model-summary-report">
-    <div>
-        <h2 class="summary-report-title">
-            <span data-bind="text: report.get('displayname') "></span>
-            <a class="summary-report-link" href="javascript(void);" data-bind="text: typeOfMod"></a>
-        </h2>
-    </div>
-
-    <!-- Header -->
-    <div class="summary-report-subtitle">
-        <span>
-            <span class="subtitle-category">{% trans "Carried out by:" %}</span>
-            <span class="subtitle-value" data-bind="if: carriers().length > 0">
-                <span data-bind="foreach: carriers">
-                    <span data-bind="if: $index() > 0">, </span>
-                    <a target="_blank" data-bind="text: name, attr: { href: link }, click: function() { return true;}, clickBubble: false"></a>
-                </span>
-            </span>
-            <span class="subtitle-value-blank" data-bind="if: carriers().length === 0">
-                {% trans "No information" %}
-            </span>
-        </span>
-        <span style="float: right; font-size: 13px;">{% trans "Modification Type" %}</span>
-    </div>
-
-    <!-- Description -->
-    <div class="summary-report-description">
-        <span class="subtitle-category">{% trans "Modification Description:" %}</span>
-        <span class="subtitle-value">
-            <span data-bind="if: description.length > 0">
-                <div data-bind="html: description"></div>
-            </span>
-            <span data-bind="if: description.length === 0">
-                {% trans "No description available" %}
-            </span>
-        </span>
-    </div>
-
-    <!-- Related Activities -->
-    <div class="summary-report-related-panel">
-        <div class="summary-report-related">
-            {% trans "Object(s) Modified" %}
-        </div>
-        <div class="subtitle-value" data-bind="if: ModifiedObjects().length > 0">
-            <div data-bind="foreach: ModifiedObjects">
-                <a target="_blank" data-bind="text: name, attr: { href: link }, click: function() { return true;}, clickBubble: false"></a>
-            </div>
-        </div>
-        <span data-bind="if: ModifiedObjects().length === 0">
-            {% trans "No Object Modified" %}
-        </span>
-    </div>
-
-    <div class="summary-report-related-panel">
-        <div class="summary-report-related">
-            {% trans "Duration:" %}
-        </div>
-        <div>
-            <div class="subtitle-value">
-                <span class="" data-bind="text: 'Modification started: ' + Beginning"></span>
-                <span class="" data-bind="text: 'Modification completed on: ' + End"></span>
-            </div>
-        </div>
+    <div class="afs-report-page">
+        <!-- Names -->
+        <div data-bind="component: {
+            name: 'views/components/reports/scenes/name',
+            params: {
+                data: resource,
+                cards: nameCards,
+                dataConfig: nameDataConfig
+            }
+        }"></div>
+        <!-- Description -->
+        <div data-bind="component: {
+            name: 'views/components/reports/scenes/description',
+            params: {
+                data: resource,
+                cards: descriptionCards,
+            }
+        }"></div>
     </div>
 </div>
 
