--- a/afs/templates/views/components/reports/sampling-activity.htm
+++ b/afs/templates/views/components/reports/sampling-activity.htm
@@ -63,3 +63,29 @@
     </div>            
     {% endblock body %}
 {% endblock report %}
+
+{% block summary %}
+
+<div class="model-summary-report">
+    <div class="afs-report-page">
+        <!-- Names -->
+        <div data-bind="component: {
+            name: 'views/components/reports/scenes/name',
+            params: {
+                data: resource,
+                cards: nameCards,
+                dataConfig: nameDataConfig
+            }
+        }"></div>
+        <!-- Description -->
+        <div data-bind="component: {
+            name: 'views/components/reports/scenes/description',
+            params: {
+                data: resource,
+                cards: descriptionCards,
+            }
+        }"></div>
+    </div>
+</div>
+
+{% endblock summary %}
