--- a/afs/templates/views/components/reports/textual-work.htm
+++ b/afs/templates/views/components/reports/textual-work.htm
@@ -80,65 +80,28 @@
 {% endblock report %}
 
 {% block summary %}
+
 <div class="model-summary-report">
-    <!-- Header -->
-    <div>
-        <div class="summary-report-title">
-            <span data-bind="text: report.get('displayname') "></span>
-            <a class="summary-report-link" href="javascript(void);" data-bind="text: typeOfTextualWork"></a>
-        </div>
+    <div class="afs-report-page">
+        <!-- Names -->
+        <div data-bind="component: {
+            name: 'views/components/reports/scenes/name',
+            params: {
+                data: resource,
+                cards: nameCards,
+                dataConfig: nameDataConfig
+            }
+        }"></div>
+        <!-- Description -->
+        <div data-bind="component: {
+            name: 'views/components/reports/scenes/description',
+            params: {
+                data: resource,
+                cards: descriptionCards,
+                dataConfig: descriptionDataConfig
+            }
+        }"></div>
     </div>
-
-    <div class="summary-report-subtitle">
-        <span>
-            <span class="subtitle-category">{% trans "Carried out by:" %}</span>
-            <span class="subtitle-value" data-bind="if: carriers().length > 0">
-                <span data-bind="foreach: carriers">
-                    <span data-bind="if: $index() > 0">, </span>
-                    <a target="_blank" data-bind="text: name, attr: { href: link }, click: function() { return true;}, clickBubble: false"></a>
-                </span>
-            </span>
-            <span class="subtitle-value-blank" data-bind="if: carriers().length === 0">
-                {% trans "No information" %}
-            </span>
-        </span>
-        <span style="float: right; font-size: 13px;">{% trans "Type of Textual Work" %}</span>
-    </div>
-
-    <!-- Description -->
-    <div class="summary-report-description">
-        <span class="subtitle-category">{% trans "Textual Work Description:" %}</span>
-        <span class="subtitle-value">
-            <span data-bind="if: description.length > 0">
-                <div data-bind="html: description"></div>
-            </span>
-            <span data-bind="if: description.length === 0">
-                {% trans "No description available" %}
-            </span>
-        </span>
-    </div>
-
-    <!-- Related Observations -->
-    <div class="summary-report-related-panel">
-        <div class="summary-report-related">
-            {% trans "Related Textual Work:" %}
-        </div>
-        <div data-bind="if: otherTextualWork().length > 0">
-            <div class="subtitle-value" data-bind="foreach: otherTextualWork">
-                <a class="summary-report-related-list" target="_blank" data-bind="text: name, attr: { href: link }, click: function() { return true;}, clickBubble: false"></a>
-            </div>
-        </div>
-        <span data-bind="if: otherTextualWork().length === 0">
-            {% trans "No associated Textual Work" %}
-        </span>
-    </div>
-
-    <div class="summary-report-editor-button">
-        <a class="btn btn-mint btn-labeled fa fa-edit text-right" target="_blank"
-            data-bind="attr: { href: editorLink }, click: function() { return true;}, clickBubble: false">
-            {% trans "Edit Resource" %}
-        </a>
-    </div>
-
 </div>
+
 {% endblock summary %}
